@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 21b3b76c82a91842a1089fe8b0902037cdd65de7 ChangeLog
+SHA1 5a43065dede49671a47831049d007279b10b4dd3 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 f8710fd1a1d2a8d8dd815e5b823e8196e3666830 MANIFEST
-SHA1 52d0180748b87b8c7e870a2ddf1b37694aa8b13d META.yml
-SHA1 f2d694abb4c0d307eddc098b86a15df919c47be3 Makefile.PL
+SHA1 5fe8082f4a893e79b74f65d66af0d1a011a55eeb META.yml
+SHA1 e1f43e8f57fe521fb272997b3296328371449086 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 31a954fc45c651d869abaf2f52ecead8f898648f bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 0162c078165957dc62154ad9ebc2eddb9a2aa9ec lib/Net/FullAuto.pm
+SHA1 e6b5ce0883d2bf601c1d28c94899e377674e0dc5 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -49,7 +49,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk44SiYACgkQdsVAdUjO9ImuTgCeJNC1YMVgydR6igNRXfAGxSB1
-OkgAoIFGcHQmWyXdf4iHTPAAr+Yw0Pfx
-=NUAp
+iEYEARECAAYFAk46bvwACgkQdsVAdUjO9ImCWQCfeUuTMRbCX11sHxwxitfS6xTW
+8QwAn3GB0X1x2zMLmk6PS9aMEp5lmNYw
+=aAGn
 -----END PGP SIGNATURE-----
