@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9953';
+our $VERSION='0.9954';
 
 
 use 5.005;
