@@ -45,6 +45,14 @@
 ################################################################
 
 
+2011-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9954 released.
+
+        * More changes to Makefile.PL to correct
+          issues.
+
+
 2011-08-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9953 released.
